1.7.3
-----
1. Fix painting of alternate listview rows.

1.7.2
-----
 1. Fix initial treeview highlight.
 2. Improve group-box label positioning.
 3. Fix line-style group box when text is above or below the line.
 4. Fix crash when using a tiled image for background appearance, but not for menu
    appearance - was using wrong config item!
 5. Fix border of hovered treeview items.
 6. Fix treeview line end detection.
 7. Fix treeview selection, and line, corruption.
 8. Fix treeview line dimensions.
 9. When shading sorted listview header, use thae fact that the header's button's
    arrow is not GTK_ARROW_NONE to indicate that this is the sorted column.
10. Fix clipping issues with full and filled focus types.

1.7.1
-----
1. Remove resize grips - kwin handles this.
2. Add mouse tracking to treeview lists.
3. Indent treeview selection as per KDE.
4. Dont use GtkStyle to draw treeview lines. Use custom code which matches previous
   KDE 'old' style.
5. Fix drawing or progressbar groove in treeview.

1.7.0
-----
1. First Gtk3 preview release - compiles with 2.91.3. See
   TODO for list of known issues.
2. Support dragging of windows via toolbar.