@@ -34,10 +34,6 @@ The following options may be supplied to cmake:
        If the KDE_SESSION_VERSION is not set, then assume we are running
        under KDE3. If this cmake option is not set, then KDE4 is assumed.
 
-    -DQTC_CAIRO_1_10_HACK=true
-       Duplicate each stop in a gradient - seems to workaround issues with NVIDIA and
-       cairo 1.10. NOTE: This may have an impact on performance.
-
     -DQTC_STYLE_SUPPORT=true
        Support QtCurve style files. These are stored as
        <kde prefix>/share/apps/kstyle/themes/qtc_<stylename>.themerc
